fix wrap, width 100p

--- a/src/setups/_wrap.scss
+++ b/src/setups/_wrap.scss
@@ -15,6 +15,7 @@
   #{base-class('wrap', false)} {
     margin-right: auto;
     margin-left: auto;
+    width: 100%;
     max-width: if($modern, var(--wrap-width), 100%);
   }
   .wrap-left { margin-left: 0; }
