--- a/test/legacy/wrap-test.css
+++ b/test/legacy/wrap-test.css
@@ -1,6 +1,7 @@
 [class^="wrap-"], [class*=" wrap-"] {
   margin-right: auto;
   margin-left: auto;
+  width: 100%;
   max-width: 100%;
 }
 
