--- a/test/modern/all-test.css
+++ b/test/modern/all-test.css
@@ -47,6 +47,7 @@
 [class^="wrap-"], [class*=" wrap-"] {
   margin-right: auto;
   margin-left: auto;
+  width: 100%;
   max-width: var(--wrap-width);
 }
 
