--- a/test/modern/wrap-test.css
+++ b/test/modern/wrap-test.css
@@ -42,6 +42,7 @@
 [class^="wrap-"], [class*=" wrap-"] {
   margin-right: auto;
   margin-left: auto;
+  width: 100%;
   max-width: var(--wrap-width);
 }
 
