--- a/test/www/app.css
+++ b/test/www/app.css
@@ -559,6 +559,7 @@ template {
 [class^="wrap-"], [class*=" wrap-"] {
   margin-right: auto;
   margin-left: auto;
+  width: 100%;
   max-width: var(--wrap-width);
 }
 
